Fix image issue on mobile
  - NOTE: Do not use width: 100% with padding, as this will overflow the
    viewport.

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -48,7 +48,7 @@ img {
     text-align: center;
     border: none;
     border-radius: 30px;
-    width: 100%;
+    width: 90%;
     margin: 10px auto 10px auto; // top, right, bottom, left
     padding: 20px;
 }
